2012-12-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gmm-utils.el (gmm-called-interactively-p): Revert.
	This seems to cause Emacs to get stuck!
	* gnus-art.el (article-unsplit-urls)
	* gnus-bookmark.el (gnus-bookmark-bmenu-list)
	* gnus-registry.el (gnus-registry-get-article-marks)
	* message.el (message-goto-body)
	(message-called-interactively-p): Revert.

	* gmm-utils.el (gmm-called-interactively-p): New function.
	* gnus-art.el (article-unsplit-urls)
	* gnus-bookmark.el (gnus-bookmark-bmenu-list)
	* gnus-registry.el (gnus-registry-get-article-marks)
	* message.el (message-goto-body): Use it.
	(message-called-interactively-p): Remove.

	* gmm-utils.el (gmm-flet): Restore it using cl-letf.
	* gnus-sync.el (gnus-sync-lesync-call)
	* message.el (message-read-from-minibuffer): Use it.

2012-12-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gmm-utils.el (gmm-flet): Remove.
	* gnus-sync.el (gnus-sync-lesync-call)
	* message.el (message-read-from-minibuffer): Don't use it.

2012-12-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gmm-utils.el (gmm-labels): Use cl-labels if available.

2012-12-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gmm-utils.el (gmm-flet, gmm-labels): New macros.

	* gnus-sync.el (gnus-sync-lesync-call)
	* message.el (message-read-from-minibuffer): Use gmm-flet.

	* gnus-score.el (gnus-score-decode-text-parts): Use gmm-labels.

	* gnus-util.el (gnus-macroexpand-all): Remove.

2012-12-03  Andreas Schwab  <schwab@linux-m68k.org>

	* gnus-sum.el (gnus-summary-mode-map): Bind gnus-summary-widget-forward
	to TAB, not [tab].
	(gnus-summary-article-map): Likewise.

	* gnus-sync.el (gnus-sync-newsrc-offsets): Restore definition.
	(gnus-sync-save): Use correct format for gnus-sync-newsrc-loader.

2012-11-21  Paul Eggert  <eggert@cs.ucla.edu>

	* time-date.el: Commentary fix.

2012-11-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* color.el: Don't require cl.
	(color-complement): `caddr' -> `nth 2'.

	* time-date.el (time-to-seconds): De-obsolete.
